2016-12-10 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/GNUstepOutput.m
	Traditional init code

2015-03-08 Riccardo Mottola <rm@gnu.org>

	* TalkSoupBundles/Functions.m
	* TalkSoupBundles/TalkSoupMisc.h
	Wildcard matching additions.

	* InFilters/Ignore/GNUmakefile
	* InFilters/Ignore/GNUmakefile.preamble
	* InFilters/Ignore/Ignore-Info.plist
	* InFilters/Ignore/Ignore.h
	* InFilters/Ignore/Ignore.m
	Imported (from old git repo) and adapted IGNORE plugin

2015-03-01 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	If aMessage is empty, do not print it at all (fixes crash)

	* TalkSoupBundles/Functions.m
	If one of the arguments is nil, do not crash but insert an empty string.

2015-02-25 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/NamePromptController.m
	I no name is entered, do not do anyything instead of closing the panel.

2015-02-25 Riccardo Mottola <rm@gnu.org>

	* InFilters/DCCSupport/DCCTransfer.h
	* InFilters/DCCSupport/DCCTransfer.m
	* InFilters/DCCSupport/DCCSender.h
	* InFilters/DCCSupport/DCCSender.m
	* InFilters/DCCSupport/DCCGetter.h
	* InFilters/DCCSupport/DCCGetter.m
	* InFilters/DCCSupport/DCCObject.h
	* InFilters/DCCSupport/DCCObject.m
	new DCCTransfer superclass for DCCSender and DCCGetter, further cleanup

2015-02-25 Riccardo Mottola <rm@gnu.org>

	* InFilters/Highlighting/Highlighting.m
	Local variable with explicit type, substitute GS macro

	* InFilters/Highlighting/HighlightingPreferencesController.h
	Declare local protocol for < 10.6

2015-02-24 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Tools/dns_helper.m
	Look for all addresses for the first IPv4 looking one

2015-02-24 Riccardo Mottola <rm@gnu.org>

	* TalkSoupBundles/Functions.m
	* TalkSoupBundles/TalkSoupMisc.h
	* InFilters/DCCSupport/DCCSupport.m
	* Output/GNUstepOutput/Controllers/NamePromptController.m
	* Output/GNUstepOutput/Controllers/InputController.m