@@ -1,3 +1,12 @@
+2016-12-12 Riccardo Mottola <rm@gnu.org>
+
+	* TalkSoupBundles/Dummy.m
+	* TalkSoupBundles/TalkSoupProtocols.h
+	* Input/NetclassesInput/main.m
+	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.h
+	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
+	Rename newNickNeededWhileRegisteringOnConnection into needNewNickWhileRegisteringOnConnection to help static analyzer, since it is not a new object.
+
 2016-12-10 Riccardo Mottola <rm@gnu.org>
 
 	* Output/GNUstepOutput/GNUstepOutput.m
